mini-thirdparty/templates/etcd.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: etcd
  labels:
    app: etcd
    group: hkube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
        group: hkube
    spec:
      containers:
        - name: etcd
          image: 'quay.io/coreos/etcd:latest'
          command: 
            - /usr/local/bin/etcd
            - --name 
            - my-etcd
            - --cors
            - '*'
            - --initial-advertise-peer-urls
            - http://0.0.0.0:2380
            - --listen-peer-urls
            - http://0.0.0.0:2380
            - --advertise-client-urls
            - http://0.0.0.0:4001
            - --listen-client-urls
            - http://0.0.0.0:4001
            - --initial-cluster-state
            - new
          # args: ["--data-dir=data.etcd --name "my-etcd" --cors='*' --initial-advertise-peer-urls http://0.0.0.0:2380 --listen-peer-urls http://0.0.0.0:2380 --advertise-client-urls http://0.0.0.0:4001 --listen-client-urls http://0.0.0.0:4001  --initial-cluster-state new" ]
          # args: ["--data-dir=data.etcd --name my-etcd --cors='*' --initial-advertise-peer-urls http://0.0.0.0:2380 --listen-peer-urls http://0.0.0.0:2380 --advertise-client-urls http://0.0.0.0:4001 --listen-client-urls http://0.0.0.0:4001  --initial-cluster-state new"]
          ports:
            - containerPort: 2380
              name: peer
            - containerPort: 4001
              name: client

---
kind: Service
apiVersion: v1
metadata:
  name: etcd-client
  labels:
    app: etcd
    group: hkube
spec:
  selector:
    app: etcd
  ports:
    - name: client
      protocol: TCP
      port: 4001
      targetPort: 4001
    - name: peer
      protocol: TCP
      port: 2380
      targetPort: 2380
