mini-thirdparty/templates/jaeger-all-in-one.yml
#
# Copyright 2017 The Jaeger Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
#

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jaeger-deployment
  labels:
    app: jaeger
    jaeger-infra: jaeger-deployment
    group: hkube
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jaeger
        jaeger-infra: jaeger-pod
        group: hkube
    spec:
        containers:
        -   env:
            - name: COLLECTOR_ZIPKIN_HTTP_PORT
              value: "9411"
            - name: QUERY_BASE_PATH
              value: "/jaeger"
            image: jaegertracing/all-in-one
            name: jaeger
            ports:
              - containerPort: 5775
                protocol: UDP
              - containerPort: 6831
                protocol: UDP
              - containerPort: 6832
                protocol: UDP
              - containerPort: 16686
                protocol: TCP
              - containerPort: 9411
                protocol: TCP
            readinessProbe:
              httpGet:
                path: "/"
                port: 16686
              initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  labels:
    app: jaeger
    jaeger-infra: jaeger-service
    group: hkube
spec:
  ports:
    - name: query-http
      port: 16686
      protocol: TCP
      targetPort: 16686
  selector:
    jaeger-infra: jaeger-pod
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  labels:
    app: jaeger
    jaeger-infra: collector-service
    group: hkube
spec:
  ports:
  - name: jaeger-collector-tchannel
    port: 14267
    protocol: TCP
    targetPort: 14267
  - name: jaeger-collector-http
    port: 14268
    protocol: TCP
    targetPort: 14268
  - name: jaeger-collector-zipkin
    port: 9411
    protocol: TCP
    targetPort: 9411
  selector:
    jaeger-infra: jaeger-pod
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-agent
  labels:
    app: jaeger
    jaeger-infra: agent-service
    group: hkube
spec:
  ports:
  - name: agent-zipkin-thrift
    port: 5775
    protocol: UDP
    targetPort: 5775
  - name: agent-compact
    port: 6831
    protocol: UDP
    targetPort: 6831
  - name: agent-binary
    port: 6832
    protocol: UDP
    targetPort: 6832
  selector:
    jaeger-infra: jaeger-pod
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    app: jaeger
    jaeger-infra: zipkin-service
    group: hkube
spec:
  ports:
  - name: jaeger-collector-zipkin
    port: 9411
    protocol: TCP
    targetPort: 9411
  clusterIP: None
  selector:
    jaeger-infra: jaeger-pod
