mini-thirdparty/templates/redis.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        group: hkube
    spec:
      containers:
      - name: master
        image: redis:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    group: hkube
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
