mini-thirdparty/templates/ingress-jaeger.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jaeger
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  # # This assumes tls-secret exists.
  # - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /jaeger
          backend:
            serviceName: jaeger-query
            servicePort: 16686
