mini-thirdparty/templates/ingress-minio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-jaeger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  # # This assumes tls-secret exists.
  # - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /system/minio
          backend:
            serviceName: minio-service
            servicePort: 9000
